@@ -34,7 +34,7 @@
  *                mode * -p etc. if flag was clear
  *
  *
- * $Id: channel.c,v 1.162 1999/08/01 06:47:17 tomh Exp $
+ * $Id: channel.c,v 1.163 1999/08/01 07:18:23 tomh Exp $
  */
 #include "channel.h"
 #include "client.h"
@@ -2879,7 +2879,7 @@ int     m_join(struct Client *cptr,
   struct Channel *chptr = NULL;
   char  *name, *key = NULL;
   int   i, flags = 0;
-#ifdef USE_ALLOW_OP
+#ifdef NO_CHANOPS_WHEN_SPLIT
   int   allow_op=YES;
 #endif
   char  *p = NULL, *p2 = NULL;
@@ -3191,7 +3191,7 @@ int     m_join(struct Client *cptr,
       **  Complete user entry to the new channel (if any)
       */
 
-#ifdef USE_ALLOW_OP
+#ifdef NO_CHANOPS_WHEN_SPLIT
       if(allow_op)
         {
           add_user_to_channel(chptr, sptr, flags);
@@ -3209,7 +3209,7 @@ int     m_join(struct Client *cptr,
       if (MyClient(sptr) && (flags & CHFL_CHANOP) )
         {
           chptr->channelts = CurrentTime;
-#ifdef USE_ALLOW_OP
+#ifdef NO_CHANOPS_WHEN_SPLIT
           if(allow_op)
             {
               sendto_match_servs(chptr, cptr,
