@@ -1,3 +1,8 @@
+*** 19990803_1 by lusky
+changed all occurances of USE_ALLOW_OP to NO_CHANOPS_WHEN_SPLIT
+fix to prevent coring on malformed conf lines
+
+
 *** 19990802_4 by lusky
 changed a syslog to log for Bleep
 
